# fpl-mantra

./: README.md  package-lock.json  package.json
mantra/: README.md  package-lock.json  package.json
mantra/src/app/: Home.tsx  layout.tsx  page.tsx
mantra/src/app/Signup/: page.tsx
mantra/src/app/create-account/: page.tsx
mantra/src/app/create-competition/: page.tsx
mantra/src/app/dashboard/: layout.tsx  leagues.tsx  page.tsx
mantra/src/app/help/: page.tsx
mantra/src/app/join/: page.tsx
mantra/src/app/join-competition/: page.tsx
mantra/src/db/: clent.ts  creations.ts  drizzle.config.ts  getions.ts  migration.js  schema.ts
mantra/src/utils/: account.ts  competition.ts  constants.ts  create_league.ts  firebase-types.ts  fpl.json  handle_league_payments.ts  handle_paymets.ts  init_league_jackpot.ts  instruction-schema.ts  join_league.ts  league.ts  login.ts  program_id.ts  sendSol.ts  validate_members.ts
onchain/: .gitignore  Cargo.toml
onchain/src/: entrypoint.rs  lib.rs  main.rs  pinstruction.rs  plib.rs  pstate.rs  state.rs
onchain/src/processor/: create_account.rs  create_competition.rs  create_league.rs  helper.rs  init_league_jackpot.rs  join_competition.rs  join_league.rs  mod.rs  send_money.rs
test-solana/: package-lock.json  package.json
test-solana/src/app/: page.tsx
testing/: .gitignore  package.json  tsconfig.json
testing/src/: helpers.ts  structs.ts  testingCreateAccount.ts  testingInitLeagueJackpot.ts
workspace/: package-lock.json  package.json
workspace/mantra/: .env  package-lock.json  tailwind.config.ts
(+44 files in other folders)
