[package]
name = "onchain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/refere>

[dependencies]
borsh = "1.3.1"
solana-program = "1.18.3"
solana-program-test = "1.18.4"
solana-sdk = "1.18.5"
tokio = "1.36.0"

